Config: Missing elements and guimenu format fixes

--- a/scripts/xmlformat.cfg
+++ b/scripts/xmlformat.cfg
@@ -43,15 +43,24 @@ application
   format = inline
 
 guilabel
-  format = inline
+   format = inline
+   
+guimenu
+  entry-break = 0
+  exit-break = 0
+
+guisubmenu
+  entry-break = 0
+  exit-break = 0
+
+guimenuitem  
+  entry-break = 0
+  exit-break = 0
 
 menuchoice
   format = inline
-  element-break = 1
-  subindent = 0
 
 imagedata
-  format = inline
 
 literal
   format = inline
@@ -74,7 +83,8 @@ option
 uri
   format = inline
 
-
+package
+  format = inline
 
 procedure
 
@@ -130,6 +140,25 @@ taskrelated
 
 tasksummary
 
-guimenu
+mediaobject 
 
-guimenuitem  
+phrase 
+
+section
+
+colspec 
+
+entry 
+
+informaltable 
+
+row 
+
+tbody 
+
+tgroup 
+
+thead
+
+keycap
+  format = inline
