--- a/bin/xmlformat.conf
+++ b/bin/xmlformat.conf
@@ -9,6 +9,8 @@
   normalize = no
   wrap-length = 0
 
+# Inline tags:
+
 citetitle 
   format = inline
 
@@ -23,18 +25,12 @@ command
 
 emphasis
   format = inline
-
+  
 filename 
   format = inline
 
 guibutton
   format = inline
-
-para
-  normalize = yes
-
-screen
-  format = verbatim
 
 ulink
   format = inline
@@ -44,26 +40,13 @@ application
 
 guilabel
    format = inline
-   
-guimenu
-  entry-break = 0
-  exit-break = 0
-
-guisubmenu
-  entry-break = 0
-  exit-break = 0
-
-guimenuitem  
-  entry-break = 0
-  exit-break = 0
 
 menuchoice
   format = inline
 
-imagedata
-
 literal
   format = inline
+  #TODO: wrap-sentence = no
 
 replaceable
   format = inline
@@ -86,6 +69,35 @@ uri
 package
   format = inline
 
+keycap
+  format = inline
+
+keycombo
+  format = inline
+
+quote
+  format = inline
+
+superscript
+  format = inline
+
+subscript
+  format = inline
+
+xref
+  format = inline
+
+computeroutput
+  format = inline
+
+phrase 
+  format = inline
+
+
+# block tags
+
+imagedata
+
 procedure
 
 formalpara
@@ -96,8 +108,6 @@ listitem
 
 note
 
-title
-
 imageobject
 
 important
@@ -105,8 +115,6 @@ important
 step
 
 substeps
-
-bridgehead 
 
 callout 
 
@@ -126,9 +134,40 @@ question
 
 caption
 
-term
-
 variablelist
+
+xi:include
+
+abstract
+
+chapter
+
+videodata 
+
+videoobject
+
+appendix
+
+table
+
+userinput
+
+# compact tags
+
+title
+  normalize = yes
+  entry-break=0
+  exit-break=0
+
+bridgehead 
+  normalize = yes
+  entry-break=0
+  exit-break=0
+
+term
+  normalize = yes
+  entry-break=0
+  exit-break=0
 
 varlistentry
 
@@ -141,8 +180,6 @@ taskrelated
 tasksummary
 
 mediaobject 
-
-phrase 
 
 section
 
@@ -160,5 +197,25 @@ tgroup
 
 thead
 
-keycap
-  format = inline
+#Special formatting tags
+
+entry
+  normalize = yes
+
+para
+  normalize = yes
+
+screen
+  format = verbatim
+
+guimenu
+  entry-break = 0
+  exit-break = 0
+
+guisubmenu
+  entry-break = 0
+  exit-break = 0
+
+guimenuitem  
+  entry-break = 0
+  exit-break = 0
