Add 'none' wrap type and small fixes'

--- a/bin/xmlformat.conf
+++ b/bin/xmlformat.conf
@@ -1,14 +1,14 @@
 # GLS XML Format rules
 # See http://www.kitebird.com/software/xmlformat/
 *DEFAULT
-  format = block
+  #format = block
   entry-break = 1
-  element-break = 1
-  exit-break = 1
+  #element-break = 1
+  #exit-break = 1
   subindent = 2
-  normalize = no
-  wrap-length = 0
-
+  #normalize = no
+  #wrap-length = 10
+  wrap-type = sentence
 # Inline tags:
 
 citetitle 
