Add contributor Zearin to .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,52 +1,1 @@
-{
-  "files": [
-    "README.md"
-  ],
-  "imageSize": 100,
-  "commit": false,
-  "contributors": [
-    {
-      "login": "tomschr",
-      "name": "Tom Schraitle",
-      "avatar_url": "https://avatars.githubusercontent.com/u/1312925?v=4",
-      "profile": "https://github.com/tomschr",
-      "contributions": [
-        "maintenance"
-      ]
-    },
-    {
-      "login": "tbazant",
-      "name": "Tomáš Bažant",
-      "avatar_url": "https://avatars.githubusercontent.com/u/2240174?v=4",
-      "profile": "https://github.com/tbazant",
-      "contributions": [
-        "code",
-        "design"
-      ]
-    },
-    {
-      "login": "dkolepp",
-      "name": "Dan Kolepp",
-      "avatar_url": "https://avatars.githubusercontent.com/u/10145457?v=4",
-      "profile": "https://github.com/dkolepp",
-      "contributions": [
-        "test"
-      ]
-    },
-    {
-      "login": "sknorr",
-      "name": "Stefan Knorr",
-      "avatar_url": "https://avatars.githubusercontent.com/u/5476547?v=4",
-      "profile": "https://sknorr.codeberg.page",
-      "contributions": [
-        "doc"
-      ]
-    }
-  ],
-  "contributorsPerLine": 7,
-  "projectName": "xmlformat",
-  "projectOwner": "someth2say",
-  "repoType": "github",
-  "repoHost": "https://github.com",
-  "skipCi": true
-}
+{\n  \"contributors\": [\n    {\n      \"login\": \"Zearin\",\n      \"name\": \"Zearin\",\n      \"profile\": \"https://github.com/Zearin\",\n      \"contributions\": [\n        \"doc\"\n      ]\n    }\n  ]\n}
