--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,1 +1,61 @@
-{"files":["README.md"],"imageSize":100,"commit":false,"contributors":[{"login":"tomschr","name":"Tom Schraitle","avatar_url":"https://avatars.githubusercontent.com/u/1312925?v=4","profile":"https://github.com/tomschr","contributions":["maintenance"]},{"login":"tbazant","name":"Tomáš Bažant","avatar_url":"https://avatars.githubusercontent.com/u/2240174?v=4","profile":"https://github.com/tbazant","contributions":["code","design"]},{"login":"dkolepp","name":"Dan Kolepp","avatar_url":"https://avatars.githubusercontent.com/u/10145457?v=4","profile":"https://github.com/dkolepp","contributions":["test"]},{"login":"sknorr","name":"Stefan Knorr","avatar_url":"https://avatars.githubusercontent.com/u/5476547?v=4","profile":"https://sknorr.codeberg.page","contributions":["doc"]},{"login":"Zearin","name":"Zearin","avatar_url":"https://avatars.githubusercontent.com/u/1234567?v=4","profile":"https://github.com/Zearin","contributions":["doc"]}],"contributorsPerLine":7,"projectName":"xmlformat","projectOwner":"someth2say","repoType":"github","repoHost":"https://github.com","skipCi":true}
+{
+    "files": [
+        "README.md"
+    ],
+    "imageSize": 100,
+    "commit": false,
+    "contributors": [
+        {
+            "login": "tomschr",
+            "name": "Tom Schraitle",
+            "avatar_url": "https://avatars.githubusercontent.com/u/1312925?v=4",
+            "profile": "https://github.com/tomschr",
+            "contributions": [
+                "maintenance"
+            ]
+        },
+        {
+            "login": "tbazant",
+            "name": "Tomáš Bažant",
+            "avatar_url": "https://avatars.githubusercontent.com/u/2240174?v=4",
+            "profile": "https://github.com/tbazant",
+            "contributions": [
+                "code",
+                "design"
+            ]
+        },
+        {
+            "login": "dkolepp",
+            "name": "Dan Kolepp",
+            "avatar_url": "https://avatars.githubusercontent.com/u/10145457?v=4",
+            "profile": "https://github.com/dkolepp",
+            "contributions": [
+                "test"
+            ]
+        },
+        {
+            "login": "sknorr",
+            "name": "Stefan Knorr",
+            "avatar_url": "https://avatars.githubusercontent.com/u/5476547?v=4",
+            "profile": "https://sknorr.codeberg.page",
+            "contributions": [
+                "doc"
+            ]
+        },
+        {
+            "login": "Zearin",
+            "name": "Zearin",
+            "avatar_url": "https://avatars.githubusercontent.com/u/1234567?v=4",
+            "profile": "https://github.com/Zearin",
+            "contributions": [
+                "doc"
+            ]
+        }
+    ],
+    "contributorsPerLine": 7,
+    "projectName": "xmlformat",
+    "projectOwner": "someth2say",
+    "repoType": "github",
+    "repoHost": "https://github.com",
+    "skipCi": true
+}
